tests/snapshots/runtime_error_fixtures/boundary_return_string_as_int.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/boundary_return_string_as_int.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
• 1 error • examples/runtime_errors/boundary_return_string_as_int.flx
error[E300]: Return Type Mismatch

The body of `bad` does not match its declared return type.

  examples/runtime_errors/boundary_return_string_as_int.flx:4:5
  |
3 | fn bad() -> Int {
  |             --- `bad` was declared to return `Int`
4 |     RuntimeErrors.BoundaryUnknown.dynamic_string()
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     ---------------------------------------------- this expression has type `String`

Note:
  declared return type: Int
  body type: String

Help:
  Return a `Int` value from `bad` or change its annotation.
== jit ==
status: 1
stdout:
<empty>
stderr:
• 1 error • examples/runtime_errors/boundary_return_string_as_int.flx
error[E300]: Return Type Mismatch

The body of `bad` does not match its declared return type.

  examples/runtime_errors/boundary_return_string_as_int.flx:4:5
  |
3 | fn bad() -> Int {
  |             --- `bad` was declared to return `Int`
4 |     RuntimeErrors.BoundaryUnknown.dynamic_string()
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     ---------------------------------------------- this expression has type `String`

Note:
  declared return type: Int
  body type: String

Help:
  Return a `Int` value from `bad` or change its annotation.
